# event_bus

./: .gitignore  CMakeLists.txt  Package.swift  README.md
src/: CMakeLists.txt
src/event_bus/: bus.hpp  bus_impl.hpp  holder.hpp  listener.cpp  listener.hpp  types.hpp
tests/: CMakeLists.txt  test_bus.cpp  test_inner.cpp  test_instant_dispatch.cpp  test_no_listener.cpp  test_performance.cpp  test_thread_safe_dispatch.cpp
